--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 class="twitter-follow-button"
                 data-size="large"
                 data-dnt="true"
-                data-show-count="false"
+                data-show-count="true"
                 >Follow @money_theory</a
               >
               <script
