Pay yourself first change

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
         </thead>
         <tbody>
           <tr>
+            <td>Oct 16th, 2020</td>
+            <td>
+              <a
+                href="https://twitter.com/money_theory/status/1316962238226456579?s=19"
+                >Pay Yourself first</a
+              >
+            </td>
+          </tr>
+          <tr>
             <td>Oct 7th, 2020</td>
             <td>
               <a
