Added new record

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
         </thead>
         <tbody>
           <tr>
+            <td>Oct 23rd, 2020</td>
+            <td>
+              <a
+                href="https://twitter.com/money_theory/status/1319610621285969921?s=19"
+                >Income Tax Basics</a
+              >
+            </td>
+          </tr>
+          <tr>
             <td>Oct 16th, 2020</td>
             <td>
               <a
